# Light

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: subtitle.md
prompts/: annotate.j2  compose_split.j2  compose_split_retry.j2  context_prep.j2  correct_context.j2  evaluate.j2  merge_review.j2  qc.j2  refine.j2  restore_punct.j2  transcript_correct.j2  translate.j2
tests/: test_cue_utils.py  test_input.py  test_light_backend_playback.py  test_models.py  test_punct_restore.py  test_rules.py  test_run_state.py  test_timecode.py
tests/regression/cases/ilya_sutskever_age_of_research_scene_b/: case.yaml
tests/regression/cases/ilya_test_5min/: case.yaml
tests/regression/cases/ilya_test_5min_scene_b/: case.yaml
tests/regression/cases/yt_first5min/: case.yaml
tests/regression/cases/yt_first5min_scene_b/: case.yaml
tests/regression/cases/yt_kYkIdXwW2AE/: case.yaml
tests/regression/cases/yt_kYkIdXwW2AE_scene_b/: case.yaml
tests/regression/snapshots/ilya_sutskever_age_of_research_scene_b/: baseline.json  manifest.json
tests/regression/snapshots/ilya_test_5min/: manifest.json
tests/regression/snapshots/ilya_test_5min/runs/20260619T144455/: diff.json  report.json  (+1 more)
tests/regression/snapshots/ilya_test_5min_scene_b/: baseline.json  manifest.json
tests/regression/snapshots/yt_first5min/: baseline.json  manifest.json
tests/regression/snapshots/yt_first5min_scene_b/: baseline.json  manifest.json
tests/regression/snapshots/yt_kYkIdXwW2AE/: baseline.json  manifest.json
tests/regression/snapshots/yt_kYkIdXwW2AE_scene_b/: manifest.json
(+13 files in other folders)
